--- a/envs/.env.local
+++ b/envs/.env.local
@@ -1,5 +1,6 @@
 JWT_SECRET_KEY = secretTokenBackend
-REDIS_HOST = 127.0.01
+REDIS_URL = redis://redis:6379
+REDIS_HOST = 127.0.0.1
 REDIS_PORT = 6379
-MONGO_URI = mongodb://localhost:27017/users_data
+MONGO_URI = mongodb://mongo:27017/users_data
 MONGO_DB = users_data
