--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.3.9",
     "@nestjs/websockets": "^9.3.9",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "jwt-decode": "^3.1.2",
     "passport": "^0.6.0",
